; ModuleID = '/home/carl/AnghaBench/radare2/libr/asm/arch/tms320/c55x_plus/extr_decode_funcs.c_get_reg_name_4.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/asm/arch/tms320/c55x_plus/extr_decode_funcs.c_get_reg_name_4.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [4 x i8] c"ac0\00", align 1
@.str.1 = private unnamed_addr constant [4 x i8] c"ac1\00", align 1
@.str.2 = private unnamed_addr constant [4 x i8] c"ac2\00", align 1
@.str.3 = private unnamed_addr constant [4 x i8] c"ac3\00", align 1
@.str.4 = private unnamed_addr constant [4 x i8] c"ac4\00", align 1
@.str.5 = private unnamed_addr constant [4 x i8] c"ac5\00", align 1
@.str.6 = private unnamed_addr constant [4 x i8] c"ac6\00", align 1
@.str.7 = private unnamed_addr constant [4 x i8] c"ac7\00", align 1
@.str.8 = private unnamed_addr constant [3 x i8] c"t0\00", align 1
@.str.9 = private unnamed_addr constant [3 x i8] c"t1\00", align 1
@.str.10 = private unnamed_addr constant [3 x i8] c"t2\00", align 1
@.str.11 = private unnamed_addr constant [3 x i8] c"t3\00", align 1
@.str.12 = private unnamed_addr constant [4 x i8] c"ar0\00", align 1
@.str.13 = private unnamed_addr constant [4 x i8] c"ar1\00", align 1
@.str.14 = private unnamed_addr constant [4 x i8] c"ar2\00", align 1
@.str.15 = private unnamed_addr constant [4 x i8] c"ar3\00", align 1
@.str.16 = private unnamed_addr constant [4 x i8] c"ar4\00", align 1
@.str.17 = private unnamed_addr constant [4 x i8] c"ar5\00", align 1
@.str.18 = private unnamed_addr constant [4 x i8] c"ar6\00", align 1
@.str.19 = private unnamed_addr constant [4 x i8] c"ar7\00", align 1
@.str.20 = private unnamed_addr constant [6 x i8] c"ac0.l\00", align 1
@.str.21 = private unnamed_addr constant [6 x i8] c"ac1.l\00", align 1
@.str.22 = private unnamed_addr constant [6 x i8] c"ac2.l\00", align 1
@.str.23 = private unnamed_addr constant [6 x i8] c"ac3.l\00", align 1
@.str.24 = private unnamed_addr constant [6 x i8] c"ac4.l\00", align 1
@.str.25 = private unnamed_addr constant [6 x i8] c"ac5.l\00", align 1
@.str.26 = private unnamed_addr constant [6 x i8] c"ac6.l\00", align 1
@.str.27 = private unnamed_addr constant [6 x i8] c"ac7.l\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @get_reg_name_4(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  store i32 %0, i32* %2, align 4
  store i8* null, i8** %3, align 8
  %4 = load i32, i32* %2, align 4
  switch i32 %4, label %33 [
    i32 0, label %5
    i32 1, label %6
    i32 2, label %7
    i32 3, label %8
    i32 4, label %9
    i32 5, label %10
    i32 6, label %11
    i32 7, label %12
    i32 8, label %13
    i32 9, label %14
    i32 10, label %15
    i32 11, label %16
    i32 16, label %17
    i32 17, label %18
    i32 18, label %19
    i32 19, label %20
    i32 20, label %21
    i32 21, label %22
    i32 22, label %23
    i32 23, label %24
    i32 24, label %25
    i32 25, label %26
    i32 26, label %27
    i32 27, label %28
    i32 28, label %29
    i32 29, label %30
    i32 30, label %31
    i32 31, label %32
  ]

5:                                                ; preds = %1
  store i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i8** %3, align 8
  br label %33

6:                                                ; preds = %1
  store i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0), i8** %3, align 8
  br label %33

7:                                                ; preds = %1
  store i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.2, i64 0, i64 0), i8** %3, align 8
  br label %33

8:                                                ; preds = %1
  store i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.3, i64 0, i64 0), i8** %3, align 8
  br label %33

9:                                                ; preds = %1
  store i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.4, i64 0, i64 0), i8** %3, align 8
  br label %33

10:                                               ; preds = %1
  store i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.5, i64 0, i64 0), i8** %3, align 8
  br label %33

11:                                               ; preds = %1
  store i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.6, i64 0, i64 0), i8** %3, align 8
  br label %33

12:                                               ; preds = %1
  store i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.7, i64 0, i64 0), i8** %3, align 8
  br label %33

13:                                               ; preds = %1
  store i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.8, i64 0, i64 0), i8** %3, align 8
  br label %33

14:                                               ; preds = %1
  store i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.9, i64 0, i64 0), i8** %3, align 8
  br label %33

15:                                               ; preds = %1
  store i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.10, i64 0, i64 0), i8** %3, align 8
  br label %33

16:                                               ; preds = %1
  store i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.11, i64 0, i64 0), i8** %3, align 8
  br label %33

17:                                               ; preds = %1
  store i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.12, i64 0, i64 0), i8** %3, align 8
  br label %33

18:                                               ; preds = %1
  store i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.13, i64 0, i64 0), i8** %3, align 8
  br label %33

19:                                               ; preds = %1
  store i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.14, i64 0, i64 0), i8** %3, align 8
  br label %33

20:                                               ; preds = %1
  store i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.15, i64 0, i64 0), i8** %3, align 8
  br label %33

21:                                               ; preds = %1
  store i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.16, i64 0, i64 0), i8** %3, align 8
  br label %33

22:                                               ; preds = %1
  store i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.17, i64 0, i64 0), i8** %3, align 8
  br label %33

23:                                               ; preds = %1
  store i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.18, i64 0, i64 0), i8** %3, align 8
  br label %33

24:                                               ; preds = %1
  store i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.19, i64 0, i64 0), i8** %3, align 8
  br label %33

25:                                               ; preds = %1
  store i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.20, i64 0, i64 0), i8** %3, align 8
  br label %33

26:                                               ; preds = %1
  store i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.21, i64 0, i64 0), i8** %3, align 8
  br label %33

27:                                               ; preds = %1
  store i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.22, i64 0, i64 0), i8** %3, align 8
  br label %33

28:                                               ; preds = %1
  store i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.23, i64 0, i64 0), i8** %3, align 8
  br label %33

29:                                               ; preds = %1
  store i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.24, i64 0, i64 0), i8** %3, align 8
  br label %33

30:                                               ; preds = %1
  store i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.25, i64 0, i64 0), i8** %3, align 8
  br label %33

31:                                               ; preds = %1
  store i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.26, i64 0, i64 0), i8** %3, align 8
  br label %33

32:                                               ; preds = %1
  store i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.27, i64 0, i64 0), i8** %3, align 8
  br label %33

33:                                               ; preds = %1, %32, %31, %30, %29, %28, %27, %26, %25, %24, %23, %22, %21, %20, %19, %18, %17, %16, %15, %14, %13, %12, %11, %10, %9, %8, %7, %6, %5
  %34 = load i8*, i8** %3, align 8
  %35 = icmp ne i8* %34, null
  br i1 %35, label %36, label %39

36:                                               ; preds = %33
  %37 = load i8*, i8** %3, align 8
  %38 = call i8* @strdup(i8* %37)
  br label %40

39:                                               ; preds = %33
  br label %40

40:                                               ; preds = %39, %36
  %41 = phi i8* [ %38, %36 ], [ null, %39 ]
  ret i8* %41
}

declare dso_local i8* @strdup(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
